2011-08-02  Mihnea Ovidenie  <mihnea@adobe.com>

        hover then un-hover makes state change
        https://bugs.webkit.org/show_bug.cgi?id=56401

        Reviewed by David Hyatt.

        When a 'before' pseudo-element is re-added, we should check whether the insertion point is an anonymous
        block with inline children. If it is, then we should change the insertion point to the first child of the
        anonymous block, otherwise the 'before' pseudo-element ends up in a different block. We choose the insertion
        point to be the first child only if the anonymous block has children, otherwise the before element ends up
        in a wrong block.

        Tests: fast/dynamic/hover-before-position-after-style-change.html
               fast/dynamic/hover-before-position-after-style-change2.html

        * rendering/RenderObjectChildList.cpp:
        (WebCore::RenderObjectChildList::updateBeforeAfterContent):

2011-08-02  Andreas Kling  <kling@webkit.org>

        [Qt] Simplify Path::translate() implementation.
        https://bugs.webkit.org/show_bug.cgi?id=65540

        Reviewed by Benjamin Poulain.

        * platform/graphics/qt/PathQt.cpp:
        (WebCore::Path::translate):

2011-07-30  Pavel Podivilov  <podivilov@chromium.org>

        Web Inspector: merge FormattedSourceFile into SourceFile.
        https://bugs.webkit.org/show_bug.cgi?id=65411

        Reviewed by Pavel Feldman.

        Prepare for splitting SourceFile into RawSourceCode and UISourceCode:
         * merge FormattedSourceFile into SourceFile
         * rename SourceFile to RawSourceCode
         * hide formatter worker lazy creation in ScriptFormatter

        * inspector/front-end/DebuggerPresentationModel.js:
        (WebInspector.DebuggerPresentationModel):
        (WebInspector.DebuggerPresentationModel.prototype._scriptLocationToUILocation):
        (WebInspector.DebuggerPresentationModel.prototype._uiLocationToScriptLocation):